// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Modal modal with actions snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  className=""
  onEntering={[Function]}
  show={true}
>
  <ModalFooter>
    <div
      className="modal-footer_tertiary"
      key="tertiary"
    >
      <Button
        appearance="primary"
        className="px-0"
        disabled={false}
        role="tertiary"
        type="button"
        width="100%"
      >
        Tertiary
      </Button>
    </div>
    <Button
      appearance="primary"
      disabled={false}
      key="secondary"
      role="secondary"
      type="button"
      width="100%"
    >
      Cancel
    </Button>
    <Button
      appearance="primary"
      className="ml-2"
      disabled={false}
      key="primary"
      role="primary"
      type="button"
      width="100%"
    >
      Primary
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`Default Modal modal without header or content snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  className=""
  onEntering={[Function]}
  show={true}
>
  <ModalFooter>
    <Button
      appearance="primary"
      disabled={false}
      key="secondary"
      role="secondary"
      type="button"
      width="100%"
    >
      Close
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`Extended Modal extended modal snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  onEntering={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <div
      className="custom-title"
    >
      title
    </div>
  </ModalHeader>
  <Component>
    <p
      className="custom-body"
    >
      body
    </p>
  </Component>
  <ModalFooter>
    <div
      className="custom-footer"
    >
      footer
    </div>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`Simple Modal modal with title and content snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  className=""
  onEntering={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle>
      modal title
    </ModalTitle>
  </ModalHeader>
  <Component>
    modal content
  </Component>
  <ModalFooter>
    <Button
      appearance="primary"
      disabled={false}
      key="secondary"
      role="secondary"
      type="button"
      width="100%"
    >
      Close
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;
